--- a/style.css
+++ b/style.css
@@ -1,39 +1,75 @@
-body{
-    display:flex;
+body {
+    border: 1px solid #000;
+font-family: Arial, Helvetica, sans-serif;
+    margin: 25px;
+    padding: 20px;
+
+    background-color: lightpink;
+  }
+  h2 {
+    text-align: left;
+  }
+  h1 {
+    text-align: left;
+    color: black;
+  }
+
+
+  .mid {
+    display: flex;
+
+    justify-content: space-between;
+  }
+
+  .bott {
+    display: flex;
     flex-direction: column;
-    justify-content: center;
-     align-items: center;
-    background-color:black;
-   
-   
+    align-items: center;
+  }
+  img{
 
-padding-top: 32px;
-}
-h1{
-color: #7a6401;
-font-style:oblique;
-font:600
+    margin-right: 200px;
+  }
 
-}
-h3{
-color: #ab973c;
-font:200;
-font-style: normal;
+  table {
 
-}
-a:hover {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23ff9800' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-  background-position: 0 100%;
-  background-size: auto 6px;
-  background-repeat: repeat-x;
-  text-decoration: none;
-}
-p{
-  font-size: medium;
-  color: #f6f2f2;
-}
-h2{
-  color: #f7f4f4;
-  font-size:xx-large;
-  font :700
-}
+    border-collapse: collapse;
+    width: 25%;
+  }
+
+  th,
+  td {
+    border: 1px solid black;
+    text-align: center;
+    padding: 8px;
+  }
+
+  th {
+    font-weight: bold;
+  }
+
+  a {
+    color: green;
+  }
+
+  a:link {
+    color: green;
+  }
+
+  a:visited {
+    color: red;
+  }
+
+  a:active {
+    color: blue;
+  }
+
+
+
+  table {
+    border: 2px solid blue;
+  }
+
+  caption {
+    color: blue;
+  }
